--- a/Emby.AutoOrganize/Emby.AutoOrganize.csproj
+++ b/Emby.AutoOrganize/Emby.AutoOrganize.csproj
@@ -1,47 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;</TargetFrameworks>
-    <AssemblyVersion>1.5.2.0</AssemblyVersion>
-    <FileVersion>1.5.2.0</FileVersion>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <None Remove="Configuration\autoorganizelog.html" />
-    <None Remove="Configuration\autoorganizelog.js" />
-    <None Remove="Configuration\autoorganizemovie.html" />
-    <None Remove="Configuration\autoorganizemovie.js" />
-    <None Remove="Configuration\autoorganizesmart.html" />
-    <None Remove="Configuration\autoorganizesmart.js" />
-    <None Remove="Configuration\autoorganizetv.html" />
-    <None Remove="Configuration\autoorganizetv.js" />
-    <None Remove="Configuration\fileorganizer.js" />
-    <None Remove="Configuration\fileorganizer.template.html" />
-    <None Remove="thumb.jpg" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Include="Configuration\autoorganizelog.html" />
-    <EmbeddedResource Include="Configuration\autoorganizelog.js" />
-    <EmbeddedResource Include="Configuration\autoorganizesmart.html" />
-    <EmbeddedResource Include="Configuration\autoorganizesmart.js" />
-    <EmbeddedResource Include="Configuration\autoorganizemovie.html" />
-    <EmbeddedResource Include="Configuration\autoorganizemovie.js" />
-    <EmbeddedResource Include="Configuration\autoorganizetv.html" />
-    <EmbeddedResource Include="Configuration\autoorganizetv.js" />
-    <EmbeddedResource Include="Configuration\fileorganizer.js" />
-    <EmbeddedResource Include="Configuration\fileorganizer.template.html" />
-    <EmbeddedResource Include="thumb.jpg" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="mediabrowser.server.core" Version="4.3.0.2-beta" />
-    <PackageReference Include="SQLitePCL.pretty.core" Version="1.2.2" />
-    <PackageReference Include="System.Memory" Version="4.5.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Naming\" />
-  </ItemGroup>
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="Current" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <PropertyGroup />
 </Project>
